Changed from openJdk10 to openJDK8 because there is no Alpine image for openJdk10